# embedded-rt-systems-assignments

./: .gitignore  README.md
assignment_1/: assignment_1.sln
assignment_1/A1_31/: a1_31.vcxproj  main.cpp
assignment_1/A1_32/: a1_32.vcxproj  a1_32.vcxproj.filters  main.cpp
assignment_1/A1_33/: a1_33.vcxproj  a1_33.vcxproj.filters  main.cpp
assignment_1/A1_34/: a1_34.vcxproj  a1_34.vcxproj.filters  main.cpp  message.txt
assignment_1/A1_35/: InAdapter.cpp  InAdapter.hpp  Master.cpp  Master.hpp  Monitor.cpp  Monitor.hpp  Slave.cpp  Slave.hpp  Top.cpp  Top.hpp  a1_35.rc  a1_35.vcxproj  a1_35.vcxproj.filters  defs.hpp  main.cpp
assignment_1/inc/: AvalonConf.hpp  AvalonMaster.hpp  AvalonSlave.hpp  ModuleDouble.hpp  ModuleSingle.hpp  TCP.hpp  TCP_Consumer.hpp  TCP_Producer.hpp
assignment_1/large-document-fancy/: main.tex
assignment_1/latex/: main.tex
assignment_1/src/: AvalonMaster.cpp  AvalonSlave.cpp  ModuleDouble.cpp  ModuleSingle.cpp  TCP_Consumer.cpp  TCP_Producer.cpp
assignment_2/: assignment_2.sln
assignment_3/src/: CMakeLists.txt  RealTimeLoopModes.cpp  RealTimeLoopModes.h  cmakelist.txt  commands.cpp  commands.h  embeddedSystemX.cpp  embeddedSystemX.h  main.cpp  states.cpp  states.h
examples/: ExamplesVS.sln  README.txt
exercises/: ex_mac.sln
exercises-python/: pyproject.toml
project/: .gitignore
project/plots/: colordepth.ipynb  fb_dump.ipynb  pyproject.toml
systemc_template/: ModuleSingle.h  assignment-1.cpp  main.cpp  systemc_template.cpp  systemc_template.sln  systemc_template.vcxproj  systemc_template.vcxproj.filters
(+920 files in other folders)
