[tool.poetry]
name = "embedded-rt-systems-exercises"
version = "0.1.0"
description = ""
authors = ["andreasp <andreas@pedersenmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
jupyter = "^1.1.1"
jupyterlab = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
